@@ -15,13 +15,9 @@
  */
 package io.atomix.raft.zeebe;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assume.assumeTrue;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assumptions.assumeThat;
 
-import com.google.common.base.Stopwatch;
 import io.atomix.raft.RaftCommitListener;
 import io.atomix.raft.partition.impl.RaftPartitionServer;
 import io.atomix.raft.storage.log.IndexedRaftLogEntry;
@@ -42,7 +38,6 @@ import java.util.Map;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
-import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -55,8 +50,6 @@ import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 import org.junit.runners.Parameterized.Parameter;
 import org.junit.runners.Parameterized.Parameters;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 @RunWith(Parameterized.class)
 public class ZeebeTest {
@@ -71,8 +64,6 @@ public class ZeebeTest {
   @Parameter(1)
   public Collection<Function<TemporaryFolder, ZeebeTestNode>> nodeSuppliers;
 
-  private final Logger logger = LoggerFactory.getLogger(getClass());
-  private final Stopwatch stopwatch = Stopwatch.createUnstarted();
   private final TestAppender appenderWrapper = new TestAppender();
 
   private Collection<ZeebeTestNode> nodes;
@@ -101,21 +92,13 @@ public class ZeebeTest {
 
   @Before
   public void setUp() throws Exception {
-    stopwatch.reset();
     nodes = buildNodes();
     helper = new ZeebeTestHelper(nodes);
     start();
-
-    stopwatch.start();
   }
 
   @After
   public void tearDown() throws Exception {
-    if (stopwatch.isRunning()) {
-      stopwatch.stop();
-    }
-
-    logger.info("Test run time: {}", stopwatch.toString());
     stop();
   }
 
@@ -149,7 +132,7 @@ public class ZeebeTest {
     server.snapshot().join();
 
     // then
-    assertTrue(helper.containsIndexed(server, firstAppended));
+    assertThat(helper.containsIndexed(server, firstAppended)).isTrue();
   }
 
   @Test
@@ -170,13 +153,13 @@ public class ZeebeTest {
     server.snapshot().join();
 
     // then
-    assertFalse(helper.containsIndexed(server, firstAppended));
-    assertTrue(helper.containsIndexed(server, appended));
+    assertThat(helper.containsIndexed(server, firstAppended)).isFalse();
+    assertThat(helper.containsIndexed(server, appended)).isTrue();
   }
 
   @Test
   public void shouldFailover() {
-    assumeTrue(nodes.size() > 1);
+    assumeThat(nodes.size() > 1).isTrue();
 
     // given
     final int partitionId = 1;
@@ -190,21 +173,20 @@ public class ZeebeTest {
     originalLeader.start(nodes).join();
 
     // then
-    assertNotEquals(originalLeader, helper.awaitLeader(partitionId));
-    assertEquals(newLeader, helper.awaitLeader(partitionId));
+    assertThat(helper.awaitLeader(partitionId)).isNotEqualTo(originalLeader).isEqualTo(newLeader);
   }
 
   @SuppressWarnings("squid:S2699") // awaitAllContain is the assert here
   @Test
   public void shouldAppendAllEntriesEvenWithFollowerFailures() {
-    assumeTrue(nodes.size() > 1);
+    assumeThat(nodes.size() > 1).isTrue();
 
     // given
     final int partitionId = 1;
     final ZeebeTestNode leader = helper.awaitLeader(partitionId);
     final ZeebeLogAppender appender = helper.awaitLeaderAppender(partitionId);
     final List<ZeebeTestNode> followers =
-        nodes.stream().filter(node -> !node.equals(leader)).collect(Collectors.toList());
+        nodes.stream().filter(node -> !node.equals(leader)).toList();
     final List<IndexedRaftLogEntry> entries = new ArrayList<>();
 
     // when
@@ -225,6 +207,7 @@ public class ZeebeTest {
     }
   }
 
+  @SuppressWarnings("squid:S2699") // helper::await asserts
   @Test
   public void shouldNotifyCommitListeners() {
     // given
@@ -244,15 +227,13 @@ public class ZeebeTest {
     // when - then
     for (int i = 0; i < 5; i++) {
       final IndexedRaftLogEntry entry = appenderWrapper.append(appender, i, i, getIntAsBytes(i));
-      final int expectedCount = i + 1;
       helper.awaitAllContains(nodes, partitionId, entry);
 
       for (final ZeebeTestNode node : nodes) {
         final CommitListener listener = listeners.get(node);
         // it may take a little bit before the listener is called as this is done
         // asynchronously
-        helper.await(() -> listener.calledCount.get() == expectedCount);
-        assertEquals(entry.index(), listener.lastCommitted.get());
+        helper.await(() -> listener.lastCommitted.get() == entry.index());
       }
     }
   }
@@ -281,12 +262,10 @@ public class ZeebeTest {
   static class CommitListener implements RaftCommitListener {
 
     private final AtomicLong lastCommitted = new AtomicLong();
-    private final AtomicInteger calledCount = new AtomicInteger(0);
 
     @Override
     public void onCommit(final long index) {
       lastCommitted.set(index);
-      calledCount.incrementAndGet();
     }
   }
 }
